# Oino

./: .gitignore  .mise.toml  AGENT.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
.pi/skills/ratatui/: SKILL.md  research-log-v2.md
.pi/skills/ratatui/_archive/monolithic-v1/: SKILL.md  research-log.md
.pi/skills/ratatui/evals/: evals.json  manual-review.md
.pi/skills/ratatui/references/: architecture.md  chat-agent.md  document-viewers.md  games-boards.md  input-focus.md  inspectors-explorers.md  layouts.md  streaming-async.md  tables-grids.md  telemetry-dashboards.md  testing-evals.md  theming-polish.md
.unipi/docs/adr/: 2026-05-21-extension-package-layouts.md  2026-05-21-extension-wasm-json-v1-abi.md
.unipi/docs/fix/: 2026-05-16-hide-tool-call-bubbles-fix.md  2026-05-17-minimal-chat-style-compact-tool-rows-fix.md  2026-05-17-new-session-command-fix.md  2026-05-17-tui-paste-and-generating-ux-fix.md
.unipi/docs/plans/: 2026-05-15-oino-auth-openrouter-tui-plan.md  2026-05-15-oino-core-runtime-plan.md  2026-05-19-oino-wasm-web-extension-plan.md  2026-05-21-oino-extension-kernel-roadmap-plan.md
.unipi/docs/quick-work/: 2026-05-16-command-paths-cli-sessions.md  2026-05-16-model-thinking-command-aliases.md  2026-05-16-pi-like-default-tools.md  2026-05-16-scrollable-command-model-suggestions.md  2026-05-16-thinking-streaming-context-fix.md  2026-05-16-tui-chord-hint.md  2026-05-16-tui-collapse-chord.md  2026-05-16-tui-model-title.md  2026-05-16-tui-settings-overlay.md  2026-05-16-tui-thinking-section.md  2026-05-16-user-settings-persistence.md  2026-05-17-help-overlay-remove-footer-help.md  2026-05-17-input-placeholder-file-attach-hint.md  2026-05-17-new-command-blank-session-guard.md  2026-05-17-searchable-help-overlay.md  2026-05-17-sessions-browser.md  2026-05-17-sessions-search-ellipsis.md  2026-05-17-streaming-input-send-panel.md  2026-05-17-syntect-code-highlighting.md  2026-05-17-unified-nucleo-search-conventions.md  2026-05-21-extension-git-install-and-guides.md
.unipi/docs/research/: 2026-05-21-oino-pi-extension-parity-matrix.md
.unipi/docs/specs/: 2026-05-15-oino-auth-openrouter-tui-design.md  2026-05-15-oino-core-design.md  2026-05-19-oino-wasm-web-extension-design.md  2026-05-20-oino-extension-kernel-roadmap-design.md  2026-05-21-oino-extension-community-registry-policy.md
.unipi/docs/work/: 2026-05-21-oino-extension-kernel-roadmap-work.md
crates/oino-agent/: Cargo.toml
crates/oino-agent-loop/: Cargo.toml
crates/oino-agent-loop/src/: lib.rs
crates/oino-agent/src/: lib.rs
crates/oino-app/: Cargo.toml
crates/oino-app/src/: ask_user.rs  auth_readiness.rs  extension_provider_runtime.rs  extension_readiness.rs  llm_compact.rs  main.rs  model_catalog.rs  nine_router.rs  notify.rs  provider_runtime.rs  ralph_loop.rs  router.rs  updater.rs  usage.rs  user_settings.rs  vcc.rs
crates/oino-auth/: Cargo.toml
crates/oino-auth/src/: lib.rs
crates/oino-env/: Cargo.toml
crates/oino-env/src/: lib.rs
crates/oino-extension-builtins/: Cargo.toml
crates/oino-extension-builtins/src/: lib.rs
crates/oino-extension-core/: Cargo.toml
crates/oino-extension-core/src/: lib.rs
crates/oino-extension-manager/: Cargo.toml
crates/oino-extension-manager/src/: lib.rs
crates/oino-extension-runtime/: Cargo.toml
crates/oino-extension-runtime/src/: lib.rs
crates/oino-extension-sdk/: Cargo.toml
crates/oino-extension-sdk/src/: lib.rs
crates/oino-harness/: Cargo.toml
crates/oino-harness/src/: lib.rs
crates/oino-harness/tests/: e2e.rs
crates/oino-provider-catalog/: Cargo.toml
crates/oino-provider-catalog/src/: lib.rs
crates/oino-provider-openrouter/: Cargo.toml
crates/oino-provider-openrouter/src/: lib.rs
crates/oino-resource/: Cargo.toml
crates/oino-resource/src/: lib.rs
crates/oino-session/: Cargo.toml
crates/oino-session/src/: lib.rs
crates/oino-tools/: Cargo.toml
crates/oino-tools/src/: lib.rs
crates/oino-tui/: Cargo.toml
crates/oino-tui/src/: action.rs  app.rs  ask_user.rs  command.rs  composer.rs  fuzzy.rs  help.rs  keymap.rs  lib.rs  markdown.rs  message.rs  model_selector.rs  render.rs  resource.rs  settings.rs  text.rs  theme.rs  transcript.rs
crates/oino-types/: Cargo.toml
crates/oino-types/src/: lib.rs
docs/: README.md  architecture.md  auth-openrouter-tui.md  auth.md  built-in-extensions.md  command.md  commands.md  completion-notes.md  configurations.md  extension.md  keymap.md  pi-compatibility.md  resources.md  sessions.md  transcript-rendering.md  update.md
docs/dev/: extension-dev.md  theme.md  tui.md
docs/extension-kernel/: README.md  developer-guide.md  rollout-review.md  user-guide.md
docs/extension-sdk/: README.md
docs/theme-system/: README.md  component-classification.md  deepseek-tui-research.md  text-inventory.generated.md  theme-precedence-and-ux.md  theme-schema.md
examples/extensions/rust-wasm-fixture/: README.md  oino.package.json  plugin.wasm
examples/extensions/rust-wasm-fixture/docs/: README.md
examples/extensions/rust-wasm-fixture/examples/: basic.rs
examples/extensions/rust-wasm-fixture/extensions/example/: oino.extension.json
examples/extensions/rust-wasm-fixture/themes/: example-theme.json
extensions/additional/: README.md
extensions/built-in/: README.md
extensions/built-in/9router/docs/: README.md
extensions/built-in/ask-user/: oino.package.json
extensions/built-in/ask-user/docs/: README.md
extensions/built-in/craft-skill/: oino.package.json
extensions/built-in/footer-status/: oino.package.json
extensions/built-in/footer-status/docs/: README.md
extensions/built-in/mode-sandbox/docs/: README.md
extensions/built-in/notify/: oino.package.json
extensions/built-in/ralph-loop/docs/: README.md
extensions/built-in/router/docs/: README.md
extensions/built-in/vcc/: oino.package.json
extensions/built-in/vcc/docs/: README.md
scripts/: docs-check.sh  install-all-builtins.sh  install-interactive.sh  install-smoke.sh  install.ps1  install.sh  podman-test.sh
scripts/podman/: Containerfile
(+12 files in other folders)
