[workspace]
members = [
  "crates/oino-types",
  "crates/oino-agent-loop",
  "crates/oino-agent",
  "crates/oino-session",
  "crates/oino-harness",
  "crates/oino-env",
  "crates/oino-tools",
  "crates/oino-auth",
  "crates/oino-provider-openrouter",
  "crates/oino-tui",
  "crates/oino-app",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://example.invalid/oino"

[workspace.dependencies]
async-trait = "0.1"
futures = "0.3"
bytes = "1"
crossterm = "0.28"
dirs = "5"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
schemars = { version = "0.8", features = ["uuid1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["fs", "io-util", "macros", "process", "rt", "rt-multi-thread", "sync", "time"] }
uuid = { version = "1", features = ["serde", "v4"] }
tempfile = "3"
unicode-segmentation = "1"
unicode-width = "0.2"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
