[workspace]
members = [
  "crates/oino-types",
  "crates/oino-agent-loop",
  "crates/oino-agent",
  "crates/oino-session",
  "crates/oino-harness",
  "crates/oino-resource",
  "crates/oino-env",
  "crates/oino-tools",
  "crates/oino-extension-core",
  "crates/oino-extension-builtins",
  "crates/oino-extension-manager",
  "crates/oino-extension-runtime",
  "crates/oino-extension-sdk",
  "crates/oino-auth",
  "crates/oino-provider-openrouter",
  "crates/oino-provider-catalog",
  "crates/oino-tui",
  "crates/oino-app",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Neuron-Mr-White/Oino"

[workspace.dependencies]
async-trait = "0.1"
futures = "0.3"
bytes = "1"
hmac = "0.12"
sha2 = "0.10"
crossterm = "0.28"
dirs = "5"
pulldown-cmark = "0.12"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
schemars = { version = "0.8", features = ["uuid1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = { version = "1", features = ["serde"] }
syntect = "5"
syntect-assets = "0.23"
nucleo = "0.5"
thiserror = "1"
tokio = { version = "1", features = ["fs", "io-util", "macros", "process", "rt", "rt-multi-thread", "sync", "time"] }
uuid = { version = "1", features = ["serde", "v4"] }
tempfile = "3"
unicode-segmentation = "1"
unicode-width = "0.2"
webbrowser = "1.2.1"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
