[package]
name = "oino-agent"
version = "0.1.3"
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
futures.workspace = true
oino-agent-loop = { path = "../oino-agent-loop" }
oino-types = { path = "../oino-types" }
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true

[lints]
workspace = true
