[package]
name = "oino-app"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "oino"
path = "src/main.rs"

[dependencies]
crossterm.workspace = true
oino-agent-loop = { path = "../oino-agent-loop" }
oino-auth = { path = "../oino-auth" }
oino-harness = { path = "../oino-harness" }
oino-provider-openrouter = { path = "../oino-provider-openrouter" }
oino-session = { path = "../oino-session" }
oino-tui = { path = "../oino-tui" }
oino-types = { path = "../oino-types" }
ratatui.workspace = true
thiserror.workspace = true
tokio.workspace = true

[lints]
workspace = true
