[package]
name = "oino-app"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "oino"
path = "src/main.rs"

[dependencies]
async-trait.workspace = true
crossterm.workspace = true
dirs.workspace = true
oino-agent-loop = { path = "../oino-agent-loop" }
oino-auth = { path = "../oino-auth" }
oino-extension-builtins = { path = "../oino-extension-builtins" }
oino-extension-core = { path = "../oino-extension-core" }
oino-extension-manager = { path = "../oino-extension-manager" }
oino-extension-runtime = { path = "../oino-extension-runtime" }
oino-harness = { path = "../oino-harness" }
oino-provider-openrouter = { path = "../oino-provider-openrouter" }
oino-resource = { path = "../oino-resource" }
oino-session = { path = "../oino-session" }
oino-tools = { path = "../oino-tools" }
oino-tui = { path = "../oino-tui" }
oino-types = { path = "../oino-types" }
ratatui.workspace = true
serde.workspace = true
semver.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
webbrowser.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
