[package]
name = "oino-auth"
version = "0.1.2"
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
dirs.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
