[package]
name = "oino-extension-builtins"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
oino-agent-loop = { path = "../oino-agent-loop" }
oino-extension-core = { path = "../oino-extension-core" }
oino-provider-catalog = { path = "../oino-provider-catalog" }
oino-resource = { path = "../oino-resource" }
oino-tui = { path = "../oino-tui", default-features = false }
thiserror.workspace = true

[dev-dependencies]
oino-env = { path = "../oino-env" }
oino-tools = { path = "../oino-tools" }
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true

[lints]
workspace = true
