[package]
name = "oino-extension-manager"
version = "0.1.2"
edition.workspace = true
license.workspace = true

[dependencies]
oino-extension-builtins = { path = "../oino-extension-builtins" }
oino-extension-core = { path = "../oino-extension-core" }
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
