[package]
name = "oino-extension-runtime"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
oino-extension-core = { path = "../oino-extension-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
semver.workspace = true

[lints]
workspace = true
