[package]
name = "oino-extension-runtime"
version = "0.1.3"
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
oino-agent-loop = { path = "../oino-agent-loop" }
oino-extension-core = { path = "../oino-extension-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
oino-types = { path = "../oino-types" }
semver.workspace = true
tokio.workspace = true

[lints]
workspace = true
