[package]
name = "oino-extension-sdk"
version = "0.1.3"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "oino-extension-devkit"
path = "src/bin/oino-extension-devkit.rs"

[dependencies]
oino-extension-core = { path = "../oino-extension-core" }
oino-extension-manager = { path = "../oino-extension-manager" }
oino-extension-runtime = { path = "../oino-extension-runtime" }
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
