[package]
name = "oino-provider-openrouter"
version = "0.1.2"
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
futures.workspace = true
oino-agent-loop = { path = "../oino-agent-loop" }
oino-auth = { path = "../oino-auth" }
oino-provider-catalog = { path = "../oino-provider-catalog" }
oino-types = { path = "../oino-types" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
