[package]
name = "oino-session"
version = "0.1.3"
edition.workspace = true
license.workspace = true

[dependencies]
oino-extension-core = { path = "../oino-extension-core" }
oino-types = { path = "../oino-types" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true

[lints]
workspace = true
