[package]
name = "oino-tui"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
crossterm.workspace = true
oino-types = { path = "../oino-types" }
ratatui.workspace = true
serde.workspace = true
serde_json.workspace = true
unicode-segmentation.workspace = true
unicode-width.workspace = true

[lints]
workspace = true
