[package]
name = "oino-tui"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "render-test"
path = "src/bin/render_test.rs"

[dependencies]
crossterm.workspace = true
nucleo.workspace = true
oino-extension-core = { path = "../oino-extension-core" }
oino-types = { path = "../oino-types" }
pulldown-cmark.workspace = true
ratatui.workspace = true
serde.workspace = true
serde_json.workspace = true
syntect.workspace = true
syntect-assets.workspace = true
unicode-segmentation.workspace = true
unicode-width.workspace = true

[lints]
workspace = true
